<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MenuPrincipalFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorFondoLogin">

        <Button
            android:id="@+id/btnJugar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="93dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="72dp"
            android:text="@string/jugar"
            app:layout_constraintBottom_toTopOf="@+id/btnRanking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnRanking"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="58dp"
            android:text="@string/ranking"
            app:layout_constraintBottom_toTopOf="@+id/btnSalir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnJugar" />

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="65dp"
            android:text="@string/salir"
            app:layout_constraintBottom_toTopOf="@+id/btnBorrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRanking" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="101dp"
            android:text="@string/borrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSalir" />

        <TextView
            android:id="@+id/txtUser"
            android:layout_width="251dp"
            android:layout_height="24dp"
            android:layout_marginTop="28dp"
            android:text="@string/user"
            android:textColor="@color/colorSecundary"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btnJugar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.097" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>